Bug 70926 - Model objects not copied to clipboard with canvas items (affects copying between instances)
Summary: Model objects not copied to clipboard with canvas items (affects copying betw...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Steyn
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2003-12-20 16:44 UTC by Jonathan Riddell
Modified: 2013-11-12 17:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Riddell 2003-12-20 16:44:23 UTC
Version:            (using KDE Devel)

When copying canvas items, correspoding UML model items are not copied.  So when copying a class diagram between instances of umbrello the classes can not be pasted because they don't exist as internal items.

Copying state or activity diagram items which do not have internal UML objects has no such problems.
Comment 1 Joris Steyn 2013-11-10 19:20:33 UTC
Git commit 1bfad17b6e6891a316ea56ac906980175ae5a058 by Joris Steyn.
Committed on 13/10/2013 at 15:09.
Pushed by jorissteyn into branch 'master'.

Fix copy/paste between Umbrello instances

Clip4 now contains all the UMLObjects corresponding to the copied widgets.

Some related but obviously unused code removed. Involves a better fix than
c63e77c for broken copy/paste of listview items.
Related: bug 279788, bug 195803, bug 291749, bug 128068

M  +7    -48   umbrello/clipboard/umlclipboard.cpp
M  +18   -14   umbrello/clipboard/umldragdata.cpp
M  +6    -0    umbrello/uml.cpp
M  +0    -111  umbrello/umllistview.cpp
M  +0    -5    umbrello/umllistview.h
M  +1    -2    umbrello/umlobject.cpp

http://commits.kde.org/umbrello/1bfad17b6e6891a316ea56ac906980175ae5a058
Comment 2 Ralf Habacker 2013-11-10 23:40:52 UTC
Git commit 9b2d14372905fc49076025488983fb5859637eba by Ralf Habacker, on behalf of Joris Steyn.
Committed on 13/10/2013 at 15:09.
Pushed by habacker into branch 'KDE/4.12'.

Fix copy/paste between Umbrello instances

Clip4 now contains all the UMLObjects corresponding to the copied widgets.

Some related but obviously unused code removed. Involves a better fix than
c63e77c for broken copy/paste of listview items.
Related: bug 279788, bug 195803, bug 291749, bug 128068

M  +7    -48   umbrello/clipboard/umlclipboard.cpp
M  +18   -14   umbrello/clipboard/umldragdata.cpp
M  +6    -0    umbrello/uml.cpp
M  +0    -111  umbrello/umllistview.cpp
M  +0    -5    umbrello/umllistview.h
M  +1    -2    umbrello/umlobject.cpp

http://commits.kde.org/umbrello/9b2d14372905fc49076025488983fb5859637eba
Comment 3 Joris Steyn 2013-11-12 16:53:47 UTC
Git commit d9683d52f0ce96b61fd244c4812b8a31a9f236bc by Joris Steyn.
Committed on 12/11/2013 at 16:30.
Pushed by jorissteyn into branch 'master'.

Fix crash loading XMI

Do assign parent when loading XMI. Commit 1bfad17 regressed the loading of (for
example) RefactoringAssistant.xmi. This fix makes loadFromXmi() only determine
a new parent when pasting (so, when not loading a file) like it was before.
Related: bug 279788, bug 195803

M  +7    -1    umbrello/umlobject.cpp

http://commits.kde.org/umbrello/d9683d52f0ce96b61fd244c4812b8a31a9f236bc
Comment 4 Ralf Habacker 2013-11-12 17:02:38 UTC
Git commit b1be6d458982bb8e6df824055e2eeccc018e3141 by Ralf Habacker, on behalf of Joris Steyn.
Committed on 12/11/2013 at 16:30.
Pushed by habacker into branch 'KDE/4.12'.

Fix crash loading XMI

Do assign parent when loading XMI. Commit 1bfad17 regressed the loading of (for
example) RefactoringAssistant.xmi. This fix makes loadFromXmi() only determine
a new parent when pasting (so, when not loading a file) like it was before.
Related: bug 279788, bug 195803

M  +7    -1    umbrello/umlobject.cpp

http://commits.kde.org/umbrello/b1be6d458982bb8e6df824055e2eeccc018e3141