Fix copy/paste between Umbrello instances

Clip4 now contains all the UMLObjects corresponding to the copied widgets.

Some related but obviously unused code removed. Involves a better fix than
c63e77c for broken copy/paste of listview items.

BUG: 70926
BUG: 279788
BUG: 195803
CCBUG: 291749
CCBUG: 128068